# nice-numbers-rust

./: .gitignore  Cargo.toml  README.md
src/: checks.rs  lib.rs  sequences.rs
