[package]
name = "nice-numbers"
version = "1.0.2"
edition = "2021"
authors = ["pera.urosevic@gmail.com"]
description = "Small library for number sequences"
keywords = ["numbers", "sequences", "series", "sets"]
categories = ["mathematics"]
documentation = "https://docs.rs/nice-numbers"
repository = "https://github.com/pera-urosevic/nice-numbers-rust"
license = "MIT"

[dependencies]
